sample/error/e01804-i.asn
E01804-I DEFINITIONS ::=
BEGIN
    INT ::= INTEGER {a(1), b(n)} -- E01804-I
END
